Cherry-pick 262434@main (93920b55f52f). https://bugs.webkit.org/show_bug.cgi?id=254821

Fix build of SourceBrush.cpp
    https://bugs.webkit.org/show_bug.cgi?id=254821

    Unreviewed build fix.

    * Source/WebCore/platform/graphics/SourceBrush.cpp:
    (WebCore::SourceBrush::setGradient):
    (WebCore::SourceBrush::setPattern):

    Canonical link: https://commits.webkit.org/262434@main